[package]
name = "http"
version = "0.1.0"
authors = ["Rakshith Ravi <rakshith.ravi@gmx.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juno = { path = "../juno-rust/" }
lazy_static = "1.4.0"
clap = "2.33.0"
futures = "0.3.4"
nickel = "0.11.0"

[dependencies.tokio]
version = "0.2.5"
features = ["macros", "rt-core", "sync", "time"]
